components/argo/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: understack-cluster-issuer
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
  name: argo-workflows
spec:
  ingressClassName: nginx
  rules:
  - host: workflows.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argo-server
            port:
              number: 2746
  tls:
  - hosts:
    - workflows.local
    secretName: argo-workflows-ingress-tls
